--- a/app/src/main/res/layout/dialog_nutrition_add_product.xml
+++ b/app/src/main/res/layout/dialog_nutrition_add_product.xml
@@ -13,6 +13,7 @@
         android:layout_marginTop="32dp"
         android:layout_marginEnd="16dp"
         android:layout_weight="1"
+        android:completionThreshold="3"
         android:hint="@string/start_typing_product"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
