--- a/app/src/main/res/layout/content_recipe.xml
+++ b/app/src/main/res/layout/content_recipe.xml
@@ -5,8 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="piotr.michalkiewicz.mealplannerclient.view.recipes.RecipeActivity"
-    tools:showIn="@layout/activity_recipe">
+    tools:context="piotr.michalkiewicz.mealplannerclient.view.recipes.RecipeFragment"
+    tools:showIn="@layout/fragment_recipe">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
