--- a/app/src/main/res/layout/fragment_recipe.xml
+++ b/app/src/main/res/layout/fragment_recipe.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context="piotr.michalkiewicz.mealplannerclient.view.recipes.RecipeActivity">
+    tools:context="piotr.michalkiewicz.mealplannerclient.view.recipes.RecipeFragment">
 
     <include layout="@layout/content_recipe" />
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
