--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -42,7 +42,11 @@
         android:id="@+id/cookbookScreenFragment"
         android:name="piotr.michalkiewicz.mealplannerclient.view.menu.fragments.CookbookScreenFragment"
         android:label="fragment_cookbook_screen"
-        tools:layout="@layout/fragment_cookbook_screen" />
+        tools:layout="@layout/fragment_cookbook_screen">
+        <action
+            android:id="@+id/action_cookbookScreenFragment_to_recipeFragment"
+            app:destination="@id/recipeFragment" />
+    </fragment>
     <fragment
         android:id="@+id/shoppingListFragment"
         android:name="piotr.michalkiewicz.mealplannerclient.view.menu.fragments.ShoppingListFragment"
@@ -271,4 +275,13 @@
                 app:argType="string" />
         </fragment>
     </navigation>
+    <fragment
+        android:id="@+id/recipeFragment"
+        android:name="piotr.michalkiewicz.mealplannerclient.view.recipes.RecipeFragment"
+        android:label="fragment_recipe"
+        tools:layout="@layout/fragment_recipe">
+        <argument
+            android:name="recipeId"
+            app:argType="string" />
+    </fragment>
 </navigation>
