IngredientsActivity changed to Fragment and mid MVVM implementation

--- a/app/src/main/res/layout/ingredient_list_item.xml
+++ b/app/src/main/res/layout/ingredient_list_item.xml
@@ -1,8 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout>
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
+    <data>
+
+        <variable
+            name="recipeIngredient"
+            type="piotr.michalkiewicz.mealplannerclient.recipes.model.RecipeIngredient" />
+    </data>
+
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
@@ -10,16 +17,28 @@
             android:id="@+id/ingredientListItemCB"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:text="@{recipeIngredient.name}"
             style="@style/normalTextBold"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
             android:id="@+id/ingredientListAmountTV"
+            style="@style/normalTextBold"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="4dp"
+            app:layout_constraintHorizontal_bias="1.0"
+            android:text="@{String.valueOf(recipeIngredient.amount)}"
+            app:layout_constraintBottom_toBottomOf="@+id/ingredientListItemCB"
+            app:layout_constraintEnd_toStartOf="@+id/recipeIngredientListItemUnitTV"
+            app:layout_constraintTop_toTopOf="@+id/ingredientListItemCB" />
+
+        <TextView
+            android:id="@+id/recipeIngredientListItemUnitTV"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            style="@style/normalTextBold"
-            android:layout_marginEnd="16dp"
+            android:text="@{recipeIngredient.unit}"
             app:layout_constraintBottom_toBottomOf="@+id/ingredientListItemCB"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="@+id/ingredientListItemCB" />
