--- a/app/src/main/res/layout/fragment_ingredients.xml
+++ b/app/src/main/res/layout/fragment_ingredients.xml
@@ -5,7 +5,6 @@
     tools:context=".view.recipes.IngredientsFragment">
 
     <data>
-
         <variable
             name="viewModel"
             type="piotr.michalkiewicz.mealplannerclient.view.recipes.viewmodel.RecipeViewModel" />
@@ -28,7 +27,7 @@
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recipeIngredientsListRV"
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
             android:layout_marginTop="8dp"
