--- a/app/src/main/res/layout/ingredient_list_item.xml
+++ b/app/src/main/res/layout/ingredient_list_item.xml
@@ -11,37 +11,38 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content">
 
         <CheckBox
-            android:id="@+id/ingredientListItemCB"
+            android:id="@+id/recipeIngredientListItemCB"
+            style="@style/normalTextBold"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@{recipeIngredient.name}"
-            style="@style/normalTextBold"
+            android:layout_marginStart="8dp"
+            android:layout_marginEnd="8dp"
+            android:checked="true"
+            app:layout_constraintEnd_toStartOf="@+id/recipeIngredientListAmountTV"
+            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
-            android:id="@+id/ingredientListAmountTV"
+            android:id="@+id/recipeIngredientListAmountTV"
             style="@style/normalTextBold"
-            android:layout_width="0dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginEnd="4dp"
-            app:layout_constraintHorizontal_bias="1.0"
-            android:text="@{String.valueOf(recipeIngredient.amount)}"
-            app:layout_constraintBottom_toBottomOf="@+id/ingredientListItemCB"
+            app:layout_constraintBottom_toBottomOf="@+id/recipeIngredientListItemCB"
             app:layout_constraintEnd_toStartOf="@+id/recipeIngredientListItemUnitTV"
-            app:layout_constraintTop_toTopOf="@+id/ingredientListItemCB" />
+            app:layout_constraintTop_toTopOf="@+id/recipeIngredientListItemCB" />
 
         <TextView
             android:id="@+id/recipeIngredientListItemUnitTV"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@{recipeIngredient.unit}"
-            app:layout_constraintBottom_toBottomOf="@+id/ingredientListItemCB"
+            app:layout_constraintBottom_toBottomOf="@+id/recipeIngredientListItemCB"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="@+id/ingredientListItemCB" />
+            app:layout_constraintTop_toTopOf="@+id/recipeIngredientListItemCB" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
