ShoppingListFragment moved to MVVM, summing ingredients amounts works

--- a/app/src/main/res/layout/fragment_ingredients.xml
+++ b/app/src/main/res/layout/fragment_ingredients.xml
@@ -28,10 +28,12 @@
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recipeIngredientsListRV"
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:layout_height="0dp"
             android:layout_marginStart="16dp"
+            app:layout_constraintVertical_bias="0.0"
             android:layout_marginTop="8dp"
             android:layout_marginEnd="16dp"
+            app:layout_constraintBottom_toTopOf="@+id/addProductsToShoppingListBtn"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/listOfIngredientsLabelTV" />
@@ -42,7 +44,8 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
             android:layout_marginEnd="16dp"
-            android:layout_marginBottom="16dp"
+            android:layout_marginBottom="8dp"
+            android:onClick="@{() -> viewModel.saveItemsToShoppingListAndReturn()}"
             android:text="@string/add_to_shopping_list"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
