--- a/app/src/main/res/layout/ingredient_list_item.xml
+++ b/app/src/main/res/layout/ingredient_list_item.xml
@@ -20,6 +20,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
             android:layout_marginEnd="8dp"
+            android:tag="@{recipeIngredient}"
             android:checked="true"
             app:layout_constraintEnd_toStartOf="@+id/recipeIngredientListAmountTV"
             app:layout_constraintHorizontal_bias="0.0"
