--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -76,7 +76,7 @@
 
                 </com.google.android.material.appbar.AppBarLayout>
 
-                <androidx.fragment.app.FragmentContainerView
+                <fragment
                     android:id="@+id/nav_host_fragment_container"
                     android:name="androidx.navigation.fragment.NavHostFragment"
                     android:layout_width="match_parent"
