Fixed recipe navigation and empty shopping list null

--- a/app/src/main/res/layout/fragment_recipe.xml
+++ b/app/src/main/res/layout/fragment_recipe.xml
@@ -108,6 +108,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginEnd="4dp"
                     android:layout_weight="1"
+                    android:enabled="false"
                     android:text="@string/ingredients"
                     android:onClick="@{(v) -> viewModel.navigateToIngredients()}"
                     app:layout_constraintStart_toStartOf="parent"
@@ -119,6 +120,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginStart="4dp"
                     android:layout_weight="1"
+                    android:enabled="false"
                     android:text="@string/cooking_steps"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toEndOf="@+id/goToIngredientsBtn"
