--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -49,7 +49,7 @@
     </fragment>
     <fragment
         android:id="@+id/shoppingListFragment"
-        android:name="piotr.michalkiewicz.mealplannerclient.view.menu.fragments.ShoppingListFragment"
+        android:name="piotr.michalkiewicz.mealplannerclient.view.menu.fragments.shoppinglist.ShoppingListFragment"
         android:label="fragment_shopping_list"
         tools:layout="@layout/fragment_shopping_list" />
     <fragment
